--- a/views/home.ejs
+++ b/views/home.ejs
@@ -159,8 +159,7 @@
             <!-- imaage -->
             <div class="col-md-4">
                 <div class="card" style="width: 18rem;">
-                    <img src="https://media-exp1.licdn.com/dms/image/C4E03AQE8GvDpgXY-iA/profile-displayphoto-shrink_400_400/0?e=1609977600&v=beta&t=U4DnOqVE27G1pkV-8pUnvSQ6bXi10HFNTLLrMZ_pYDU
-                    " class="card-img-top" alt="...">
+                    <img src="https://lh3.googleusercontent.com/-QfeM9gouOTU/Wxp7st4sxvI/AAAAAAAAAmw/8VWrdqzrKqwb1RtspjK9vOyKypM6A3FtgCEwYBhgLKtMDABHVOhwzph4MQJtDQCxfUT0TWyQezrpK1Pkg874i2I4reKqOH1qlwc69Vn9feb03pRz2VtqfNZjIHiilctzYDdB9BXuUYm0KZZz6Okit8ie7cPlMwSk-svUkUROmsXo-Ih0ZN5aOfzNBMFGO93tFpJabjvSvu5q3DICaDHSr6Y59fcH_k7wTzdUT9yLlCwyxE2JY7ILVsY4zF2GoSolbFhEhOFIchLXbVtADq8qMpUlue-meqMXoaDJHsnlDHd8siSOMbFNBiCLTgqRk3lRaui4xtujK3bhkSJFiYxVZDnKiPi-rklfO1suzutPLwRDle3268mTw9rtJsS6na0ywFtz1OPTAFZ2HVrEIh8qL_2Quc8OkJI63__9MM7YQ2XGWbeWrdKxfYrRIKyoEoqmLqJVNllou0UtwQi74RJFIU5_AqWMbNI8SjQvVHKs9J2zr5-N8B4-EbBiJjgXviY1kPIbjT2XsUU-giv9PsWxcyACTRs8pGAxkpUpJKgxo-3gHFEfc43Ye7NdIyPP3MuC11ao59U69-LqY4_OZpY1sbQ-YurRX3K7PvaXrcSh2LhkNcy_OZKLymEHgvjnms8XZL495QT3A5NmcaG8XEpD6zKxwSa8woIO4hgY/w140-h140-p/64c2b37f-d938-4aae-8122-1f3918b4b0e1" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Shivam Ojha</h5>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -181,11 +180,11 @@
                             Myself, Shivam Ojha a Web Developing Enthusiast.
                             My development skills includes knowledge of 
                             HTML5,CSS,JavaScript,Bootstrap,Node,Express,
-                            Authentication,MongoDB,API's.
+                            Authentication,MongoDB,API's,Socket.io.
                         </p>
                         <p>
                             I am currently pursuing my BTECH(2019-2023) in 
-                            Production and Industrial Engineering
+                            Mechanical Engineering
                             from BIT,Mesra.
                         </p>
                     <p>
